--- a/learn/python/BUILD
+++ b/learn/python/BUILD
@@ -8,8 +8,8 @@ py_test(
     default_python_version = "PY3",
     srcs_version = "PY3",
     deps = [
-        requirement("absl-py"),
+        "//third_party/py/absl",
         requirement("ascii_art"),
-        requirement("pytest"),
+        "//third_party/py/pytest",
     ],
 )
