--- a/deeplearning/deepsmith/datastores/BUILD
+++ b/deeplearning/deepsmith/datastores/BUILD
@@ -19,7 +19,7 @@ py_binary(
         "//deeplearning/deepsmith/proto:datastore_py_pb2",
         "//lib/labm8:pbutil",
         requirement("grpcio"),
-        requirement("absl-py"),
+        "//third_party/py/absl",
     ],
 )
 
